--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,10 +26,12 @@ dist.jar=${dist.dir}/ChattrBOT.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.java-json.jar=C:\\Users\\Austro\\Documents\\Libs\\Java\\JsonArray\\java-json.jar
+file.reference.jl1.0.1.jar=C:\\Users\\Austro\\Documents\\Libs\\Java\\Jlayer MP3\\JLayer1.0.1\\jl1.0.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.java-json.jar}
+    ${file.reference.java-json.jar}:\
+    ${file.reference.jl1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
